# workspace-template

./: Cargo.toml  README.md
crates/hello-world/: Cargo.toml
