[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
resolver = "3"
members = [
  "crates/*",
]
exclude = []

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]

[patch.crates-io]
